Add username endpoint
