# app/controllers/settings_controller.rb
@@ -1,0 +1,5 @@
+class SettingsController < ApplicationController
+  def username
+    render json: { username: current_user.username }
+  end
+end
