# config/routes.rb
@@ -5,4 +5,6 @@ Rails.application.routes.draw do
   # For details on the DSL available within this file, see https://guides.rubyonrails.org/routing.html
   post 'login'    => 'user_sessions#create'
   delete 'logout' => 'user_sessions#destroy'
+
+  get 'username' => 'settings#username'
 end
